# NOIZYLAB

./: # Check if Parallels Desktop app is inst.yaml  ._page-6b5d568180da3ccd.js  .claude.json  .env.example  .git_master_commit.sh  .gitconfig  .gitignore  .gitmodules  .last_survey_prompt.yaml  .prettierignore  .state_1.json  .zshrc  0.96745e63.chunk.js  1.extension.js  1.f07c6c24.chunk.js  10.1f2372c5.chunk.js  10.extension.js  100.75ef6a90.chunk.js  1000X_UPGRADE_SUMMARY.md  101.c6ee4c02.chunk.js  102.63778ee6.chunk.js  103.32d109fc.chunk.js  104.4d1783d3.chunk.js  105.818e6e66.chunk.js  106.e81af901.chunk.js  107.e11f6f49.chunk.js  108.c49ad698.chunk.js  109.acb8f3d9.chunk.js  11.d132fff4.chunk.js  11.extension.js  110.980e8bdd.chunk.js  111.c386cf7c.chunk.js  1113.js  112.64b76934.chunk.js  113.98d44f6b.chunk.js  114.d0599a96.chunk.js  114.extension.js  115.e8367877.chunk.js  116.05f69c66.chunk.js  117.3425022a.chunk.js  (+3306 more)
.brewfiles/: Brewfile.ai  Brewfile.audio  Brewfile.cloud  Brewfile.core  Brewfile.data  Brewfile.dev  Brewfile.security
.claude/: settings.json  settings.local.json
.config/: starship.toml
.devcontainer/: devcontainer.json
.github/: DRIVE_ALIAS_TEMPLATE.md  FUNDING.yml  markdown-link-check-config.json
.vscode-templates/: noizylab.code-workspace
AGENTS/: DEPLOYMENT_GUIDE.md  IMPLEMENTATION_SUMMARY.md  README.md  cloud-delegate.py  demo-working.sh  launch.sh  registry.json  sync-media.sh  test-server.py  test_cloud_delegation.py  validate-e2e.sh
AI-Tools/: README.md  agent.js
Audio_Registry/: .env.example  .gitignore  CHANGELOG.md  README.md  requirements.txt  setup.py
CODEMASTER/: GITHUB_STRUCTURE.md  INDEX.md  MEGA_HARVEST.py  ORGANIZATION_SUMMARY.md  ORGANIZE_FOR_GITHUB.sh  QUICK_NAVIGATION.md  README.md  STRUCTURE_VISUAL.txt  ai_brain_ultra.py  code_harvester.py  codemaster.py  codemaster.sh  codemaster_unified.py  ekkos_memory.py  gabriel_scanner.py  gabriel_swarm.py  gabriel_unified_command.py  genius_ai.db-journal  mega_engine.py  noizy_harvest.py  project_organizer.db  purge_empty_dirs.py  repos_noizylab.txt  requirements.txt  run_local.py  start.sh  test_integration.py  turbo_engine.py  volume_harvest.py
CODE_MASTER/: TAILSCALE_SETUP.md
COMPLETE_NOIZYLAB_WORKSPACE/: ABSORPTION_LOG.txt  DEPLOYMENT_COMPLETE.txt  ORIGINAL_WORK_FOUND.txt  VERSION.json
MEDIA/: 12TB_AUDIO_VIDEO
PROJECTS/: README.md
PROJECTS/NLR_01/: README.md  pyproject.toml
PROJECTS/NLR_01/config/: config.example.yaml  config.yaml
agents/: agent-definitions.js
analytics/: metrics-collector.js
blueprints/: project-blueprints.js
cloudflare/: hotrod-flow-worker.js  m365-hub-worker.js  sms-notification-worker.js  stripe-payment-worker.js  unified-dashboard-worker.js  wrangler-dashboard.toml  wrangler-hotrod.toml  wrangler-m365-hub.toml  wrangler-sms.toml  wrangler-stripe.toml
config/: .last_update_check.json  .state.json  059c77bb-747c-4003-a3d6-2788a8cec9be-agent-059c77bb-747c-4003-a3d6-2788a8cec9be.json  README.md  noizylab.json  tailscale-acl-template.json
docs/: API.md  (+100 more)
gabriel/portal/sdk/python/: README.md  pyproject.toml
gabriel/portal/sdk/python/gabriel/: __init__.py
(+18173 files in other folders)
