[project]
name = "gabriel-sdk"
version = "1.0.0"
description = "Official Python SDK for GABRIEL board inspection API"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "NOIZYLAB", email = "hello@noizylab.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Image Recognition",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["gabriel", "pcb", "inspection", "ai", "electronics", "repair", "vision"]
dependencies = []

[project.optional-dependencies]
httpx = ["httpx>=0.24.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://gabriel.noizylab.com"
Documentation = "https://gabriel.noizylab.com/docs"
Repository = "https://github.com/Noizyfish/GABRIEL"
Issues = "https://github.com/Noizyfish/GABRIEL/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["gabriel"]

[tool.mypy]
python_version = "3.8"
strict = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
